--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -170,6 +170,8 @@
                                 <field name="sale_order_line_description" colspan="4" nolabel="1"/>
                                 <field name="sale_order_line_notes" colspan="4" nolabel="1"/>
                             </page>
+                        </notebook>
+                        <notebook colspan="4">
                             <page string="BOM" attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False), ('is_manufactured','=',False)]}">
                                 <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" readonly="1" widget="one2many_list" context="{'default_user_id': user_id}">
                                     <tree string="BoM Structure" editable="top"
