--- a/sale_order_section/views/sale_view.xml
+++ b/sale_order_section/views/sale_view.xml
@@ -61,6 +61,7 @@
                                 <field name="subtotal" sum="totale"/>
                                 <field name="subtotal_cost" sum="totale" groups="sale.view_margin"/>
                                 <field name="subtotal_margin" sum="totale" groups="sale.view_margin"/>
+                                <field name="subtotal_margin_perc" groups="sale.view_margin"/>
                             </tree>
                         </field>
                     </field>
