--- a/crm_lead_correct/views/crm_case_categ_view.xml
+++ b/crm_lead_correct/views/crm_case_categ_view.xml
@@ -9,6 +9,8 @@
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <tree string="Case Category" editable="top" colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
+                    <field name="active" />
+                    <field name="sequence" />
                     <field name="name"/>
                     <field name="color" />
                     <field name="row_color" invisible="1" />
