--- a/crm_lead_correct/views/sale_shop_view.xml
+++ b/crm_lead_correct/views/sale_shop_view.xml
@@ -14,6 +14,7 @@
                             <tree editable="top">
                                 <field name="name"/>
                                 <field name="stage_id"/>
+                                <field name="update_amount" />
                             </tree>
                         </field>
                     </page>
