--- a/crm_lead_correct/views/crm_case_categ_view.xml
+++ b/crm_lead_correct/views/crm_case_categ_view.xml
@@ -15,6 +15,7 @@
                     <field name="color" />
                     <field name="row_color" invisible="1" />
                     <field name="object_id" invisible="1"/>
+                    <field name="crm_order_number" />
                     <field name="sale_order_number" />
                     <field name="section_id"/>
                 </tree>
