--- a/sale_order_requirement/views/order_requirement.xml
+++ b/sale_order_requirement/views/order_requirement.xml
@@ -55,6 +55,7 @@
                             <field name="user_id" />
                             <field name="state" widget="statusbar" statusbar_colors='{"draft":"red","done":"black","cancel":"grey"}'/>
                             <button name="action_view_purchase_order" string="View Purchase Order" type="object" icon="STOCK_FULLSCREEN"/>
+                            <button name="action_view_manufacturing_order" string="View Manufacturing Orders"  type="object" icon="STOCK_FULLSCREEN"/>
                         </page>
                         <page string="Full Explosion Order">
                             <field name="full_order_requirement_line_ids" nolabel="1">
