--- a/sale_order_requirement/views/order_requirement.xml
+++ b/sale_order_requirement/views/order_requirement.xml
@@ -59,7 +59,9 @@
                         </page>
                         <page string="Full Explosion Order">
                             <field name="full_order_requirement_line_ids" nolabel="1">
-                                <tree colors="brown:level==0">
+                                <tree colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
+                                    <field name="row_color" invisible="1"/>
+                                    <field name="is_leaf" invisible="1"/>
                                     <field name="level" invisible="1"/>
                                     <field name="level_name" />
                                     <field name="id" invisible="1"/>
