--- a/project_task_issues/views/project_issue_view.xml
+++ b/project_task_issues/views/project_issue_view.xml
@@ -8,10 +8,10 @@
             <field name="inherit_id" ref="project_issue.project_issue_form_view" />
             <field name="type">form</field>
             <field name="arch" type="xml">
-                <field name="task_id" position="attributes">
-                    <attribute name="required">True</attribute>
-                    <attribute name="domain">[('project_id', '=', project_id), ('state', 'in', ['open', 'working'])]</attribute>
-                </field>
+<!--                <field name="task_id" position="attributes">-->
+<!--                    <attribute name="required">True</attribute>-->
+<!--                    <attribute name="domain">[('project_id', '=', project_id), ('state', 'in', ['open', 'working'])]</attribute>-->
+<!--                </field>-->
                 <field name="progress" position="replace">
                     <field name="remaining_hours" readonly="1" widget="float_time" />
                 </field>
