--- a/project_task_issues/views/project_view.xml
+++ b/project_task_issues/views/project_view.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="project.view_task_form2"/>
             <field name="arch" type="xml">
                 <page string="Extra Info" position="after">
-                    <page string="Issues">
+                    <page string="Issues" groups="project.group_project_user" >
                         <field name="issue_ids" nolabel="1" colspan="4">
                             <tree string="Issue Tracker Tree"
                                   colors="black:state=='open';blue:state=='pending';grey:state in ('cancel', 'done')">
